--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-carousel-vertical": "^1.10.27",
     "react-dom": "^17.0.1",
     "react-fa": "^5.0.0",
+    "react-remove-scroll-bar": "^2.1.1",
     "react-responsive-carousel": "^3.2.11",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.27.13",
