--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@brainhubeu/react-carousel": "^1.19.26",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
@@ -13,12 +14,15 @@
     "react-carousel-vertical": "^1.10.27",
     "react-dom": "^17.0.1",
     "react-fa": "^5.0.0",
+    "react-icons": "^4.1.0",
+    "react-photo-gallery": "^8.0.0",
     "react-remove-scroll-bar": "^2.1.1",
     "react-responsive-carousel": "^3.2.11",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.27.13",
+    "sendmail": "^1.6.1",
     "swiper": "^6.4.5",
     "web-vitals": "^0.2.4"
   },
