--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-fa": "^5.0.0",
     "react-icons": "^4.1.0",
+    "react-lottie": "^1.2.3",
     "react-photo-gallery": "^8.0.0",
     "react-remove-scroll-bar": "^2.1.1",
     "react-responsive-carousel": "^3.2.11",
