--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@brainhubeu/react-carousel": "^1.19.26",
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-burger-menu": "^3.0.3",
     "react-carousel-vertical": "^1.10.27",
     "react-dom": "^17.0.1",
     "react-fa": "^5.0.0",
