--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "history": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-burger-menu": "^3.0.3",
     "react-carousel-vertical": "^1.10.27",
     "react-dom": "^17.0.1",
     "react-fa": "^5.0.0",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.1.0",
     "react-lottie": "^1.2.3",
     "react-photo-gallery": "^8.0.0",
