--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Jxshooter",
-  "name": "Jxshooter",
+  "short_name": "Joshua Wilkinson",
+  "name": "Joshua Wilkinson",
   "icons": [
     {
       "src": "favicon.ico",
