--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
     "history": "^5.0.0",
-    "react": "^17.0.1",
+    "react": "^16.0.0",
     "react-bootstrap": "^1.4.3",
     "react-burger-menu": "^3.0.3",
     "react-carousel-vertical": "^1.10.27",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.0.1",
     "react-fa": "^5.0.0",
     "react-ga": "^3.3.0",
     "react-icons": "^4.1.0",
+    "react-images-viewer": "^1.7.1",
     "react-lottie": "^1.2.3",
     "react-photo-gallery": "^8.0.0",
+    "react-photo-view": "^1.2.1",
     "react-remove-scroll-bar": "^2.1.1",
     "react-responsive-carousel": "^3.2.11",
     "react-reveal": "^1.2.2",
